--- a/resume.css
+++ b/resume.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, ul dl dt {
     margin: 0 auto;
     padding: 0 0 40px 0;
     background: #fff;
-    border: solid #d22042;
+    border: solid #E85B15;
     border-width: 2px 0 0 0 ;
     text-align: left;
 }
@@ -48,11 +48,11 @@ blockquote a {
 }
 
 blockquote a:hover {
-    color: #d22042;
+    color: #E85B15;
 }
 
 a {
-    color: #d22042;
+    color: #E85B15;
 }
 
 a[href$='.pdf'] {
